--- a/src/SCSS/partials/composables/_layout.scss
+++ b/src/SCSS/partials/composables/_layout.scss
@@ -6,6 +6,7 @@ li{
 }
 a{
   text-decoration: none;
+  color: black;
 }
 .navbar{
 
@@ -14,8 +15,12 @@ a{
   align-items: center;
   justify-content: space-between;
 
+
   .rightnavbar ul {
 
+ li .active{
+  border-bottom: 2px solid blue;
+}
     //Mobile Layout
 
 
