--- a/src/SCSS/partials/composables/_layout.scss
+++ b/src/SCSS/partials/composables/_layout.scss
@@ -15,42 +15,57 @@ a {
   justify-content: space-between;
   height: 50px;
   box-shadow: 0px -9px 10px 1px black;
-
-  .mobile {
-    svg {
-      font-size: 2rem;
-    }
-
-    @media screen and (min-width: 600px) {
-      display: none;
-    }
-  }
-  .leftnavbar,
-  .rightnavbar {
-    margin: 0 1rem;
-  }
-
-  .leftnavbar a {
+  svg{
     font-size: 1.5rem;
   }
-
-  .rightnavbar ul {
+.leftnavbar{
+  margin-left: 1rem;
+}
+  .rightnavbar{
+    margin-right: 1rem;
     display: none;
-
-    li .active {
-      border-bottom: 2px solid $color_primary;
+    @media screen and (min-width: 600px) {
+      display: block;
+    ul{
+      display: flex;
+      gap: .5rem;
+      .active{
+        border-bottom: 2px solid $color_primary;
+      }
     }
-
-    //Mobile Layout
-
+    }
+  }
+  
     //Desktop
     @media screen and (min-width: 600px) {
+      svg{
+        display: none;
+      }
       display: flex;
       flex-flow: row nowrap;
       gap: 1rem;
     }
   }
-}
+
+  // Active class for mobile
+  .mobile{
+    .rightnavbar{
+      transition: all .5s;
+      display: block;
+      width: 100%;
+      position: fixed;
+      left: 50%;
+      transform: translateX(-50%);
+      top: 3rem;
+      ul{
+        padding: 1rem;
+        text-align: center;
+        li{
+          padding: .5rem;
+        }
+      }
+    }
+  }
 
 //Footer
 
