--- a/src/SCSS/partials/subcomponents/sub-components-layout/contactus/_map.scss
+++ b/src/SCSS/partials/subcomponents/sub-components-layout/contactus/_map.scss
@@ -1,6 +1,12 @@
 
+.map {
 
-.map{
-  max-width: 85%;
-  margin: 1rem auto 1rem auto;
+  display: grid;
+  grid-template-columns: 1fr;
+
+  iframe {
+    justify-self: center;
+    border: none;
+    margin: 1.5rem;
+  }
 }
