--- a/src/SCSS/partials/variables/_colors.scss
+++ b/src/SCSS/partials/variables/_colors.scss
@@ -1,5 +1,4 @@
-
-$color_primary:#01A7C2;
-
-
-$color_footer:#F4F3EE;
+$color_primary: #66fcf1;
+$color_footer: #234e4c;
+$color_background: #0b0c10;
+$color_secondary: #45a29e;
