--- a/src/SCSS/partials/composables/_layout.scss
+++ b/src/SCSS/partials/composables/_layout.scss
@@ -5,52 +5,83 @@ li {
 
 a {
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
+.header {
+  position: sticky;
+  top: 0;
+  background-color: $color_background;
+}
+.footer{
+  color: white;
+  background-color: $color_secondary;
+}
 .navbar {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
   justify-content: space-between;
   height: 50px;
-  box-shadow: 0px -9px 10px 1px black;
-  svg{
+  color: white;
+  border-bottom: 2px solid white;
+  svg {
     font-size: 1.5rem;
   }
-.leftnavbar{
-  margin-left: 1rem;
-}
-  .rightnavbar{
+  .leftnavbar {
+    margin-left: 1rem;
+  }
+  .rightnavbar {
     margin-right: 1rem;
     display: none;
+    ul {
+      li {
+        padding: 0.5rem;
+        a {
+          transition: all 0.5s;
+        }
+      }
+    }
     @media screen and (min-width: 600px) {
       display: block;
-    ul{
-      display: flex;
-      gap: .5rem;
-      .active{
-        border-bottom: 2px solid $color_primary;
+      ul {
+        display: flex;
+        gap: 0.5rem;
+        .active {
+          color: $color_primary;
+          &::first-letter {
+            font-weight: bolder;
+          }
+        }
       }
     }
-    }
   }
-  
-    //Desktop
-    @media screen and (min-width: 600px) {
-      svg{
-        display: none;
-      }
-      display: flex;
-      flex-flow: row nowrap;
-      gap: 1rem;
+
+  //Desktop
+  @media screen and (min-width: 600px) {
+    svg {
+      display: none;
     }
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 1rem;
   }
+}
 
 //Footer
 
 .footer {
   background-color: $color_footer;
+  padding:.5rem;
+  .hold {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+  }
+  svg {
+    font-size: 2rem;
+  }
 
   @media screen and (min-width: 600px) {
     display: flex;
