Font,Colorscheme changes

--- a/src/SCSS/partials/subcomponents/sub-components-layout/careers/_careers.scss
+++ b/src/SCSS/partials/subcomponents/sub-components-layout/careers/_careers.scss
@@ -40,7 +40,7 @@
   .apply{
     button{
       appearance: none;
-      border: 1px solid $color_primary;
+      border: 1px solid $color_footer;
       padding: .5rem;
       background-color: white;
       border-radius: 6px;
