--- a/src/SCSS/partials/variables/_colors.scss
+++ b/src/SCSS/partials/variables/_colors.scss
@@ -1,4 +1,9 @@
-$color_primary: #66fcf1;
+$color_primary: #26bb01;
 $color_footer: #234e4c;
-$color_background: #0b0c10;
+$color_background: #696a70;
 $color_secondary: #45a29e;
+
+
+$color_green:#092909;
+
+$input_background:#e1e3ec;
