--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,14 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
-   background-color:#0b0c10
+   background-color:white
+}
+p,h1,h2,h3,h4,h5,h6{
+    color:#092909
+}
+img{
+    max-width: 100%;
+    height: auto;
 }
 .main {
   margin: 0 0.5rem;
