--- a/src/SCSS/partials/composables/_layout.scss
+++ b/src/SCSS/partials/composables/_layout.scss
@@ -5,15 +5,15 @@ li {
 
 a {
   text-decoration: none;
-  color: white;
+  color: #092909;
 }
 
 .header {
   position: sticky;
   top: 0;
-  background-color: $color_background;
+  background-color: white;
 }
-.footer{
+.footer {
   color: white;
   background-color: $color_secondary;
 }
@@ -24,7 +24,7 @@ a {
   justify-content: space-between;
   height: 50px;
   color: white;
-  border-bottom: 2px solid white;
+  border-bottom: 2px solid $color_green;
   svg {
     font-size: 1.5rem;
   }
@@ -72,7 +72,13 @@ a {
 
 .footer {
   background-color: $color_footer;
-  padding:.5rem;
+  padding: 0.5rem;
+  h3{
+    color: white;
+  }
+  a {
+    color: white;
+  }
   .hold {
     display: flex;
     align-items: center;
