--- a/src/SCSS/partials/subcomponents/sub-components-layout/contactus/_contactus.scss
+++ b/src/SCSS/partials/subcomponents/sub-components-layout/contactus/_contactus.scss
@@ -7,21 +7,21 @@ form {
     border-radius: 6px;
     border-width: 2px;
     background-color: white;
-    background-color: $color_background;
+    background-color: $input_background;
     &:hover,
     &:active {
       outline: none;
-      border: 2px solid $color_primary;
+      border: 2px solid $color_footer;
     }
   }
 
   textarea {
-    background-color: $color_background;
+    background-color: $input_background;
     border-radius: 6px;
     &:focus-visible,
     &:hover {
       border-color: transparent;
-      outline: 2px solid $color_primary;
+      outline: 2px solid $color_background;
     }
   }
 
