--- a/src/SCSS/partials/variables/_fonts.scss
+++ b/src/SCSS/partials/variables/_fonts.scss
@@ -1,7 +1,9 @@
 
 
-$font-family:"Nunito","sans-serif";
+$font-family: 'Inconsolata', monospace;
 
 .App{
     font-family: $font-family;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
 }
